--- a/owncloudApp/src/main/res/values-gl/strings.xml
+++ b/owncloudApp/src/main/res/values-gl/strings.xml
@@ -37,6 +37,8 @@
   <string name="prefs_accounts">Contas</string>
   <string name="prefs_manage_accounts">Xestionar as contas</string>
   <string name="prefs_passcode">Código de bloqueo</string>
+  <string name="prefs_biometric">Bloqueo da biometría</string>
+  <string name="prefs_biometric_summary">Activar o código de seguridade ou patrón de bloqueo para activar esta opción</string>
   <string name="prefs_touches_with_other_visible_windows">Toques con outras xanelas visíbeis</string>
   <string name="prefs_touches_with_other_visible_windows_summary">Permitir toques cando a vista estea escurecida por outra xanela visíbel. Activar o emprego de aplis de filtrado de luz.</string>
   <string name="confirmation_touches_with_other_windows_title">Confirma que quere activar esta característica?</string>
@@ -224,6 +226,10 @@ Descárgueo de aquí: %2$s</string>
   <string name="pass_code_wrong">Código de seguridade incorrecto</string>
   <string name="pass_code_removed">Retirouse o código de seguridade</string>
   <string name="pass_code_stored">O código de seguridade foi almacenado</string>
+  <string name="biometric_not_hardware_detected">Este dispositivo non admite a autenticación biométrica</string>
+  <string name="biometric_not_enrolled">Rexístrese polo menos unha biometría para usar esta característica</string>
+  <string name="biometric_prompt_title">Acceso biométrico</string>
+  <string name="biometric_prompt_subtitle">Acceda empregando a súa credencial biométrica</string>
   <string name="media_notif_ticker">%1$s reprodutor musical</string>
   <string name="media_state_playing">%1$s (reproducindo)</string>
   <string name="media_state_loading">%1$s (cargando)</string>
