--- a/owncloudApp/src/main/res/values-de/strings.xml
+++ b/owncloudApp/src/main/res/values-de/strings.xml
@@ -37,6 +37,7 @@
   <string name="prefs_accounts">Konten</string>
   <string name="prefs_manage_accounts">Konten verwalten</string>
   <string name="prefs_passcode">PIN gesperrt</string>
+  <string name="prefs_biometric">Biometrisches Sperre</string>
   <string name="prefs_biometric_summary">Passwort oder Wisch-Muster eingeben um diese Option zu  aktivieren</string>
   <string name="prefs_touches_with_other_visible_windows">Berührungen mit anderen sichtbaren Fenstern</string>
   <string name="prefs_touches_with_other_visible_windows_summary">Berührungen zulassen, wenn die Ansicht von einem anderen sichtbaren Fenster verdeckt wird. Aktiviere dies, um Lichtfilter-Apps zu verwenden.</string>
@@ -224,6 +225,10 @@
   <string name="pass_code_wrong">PIN nicht korrekt</string>
   <string name="pass_code_removed">PIN entfernt</string>
   <string name="pass_code_stored">PIN gespeichert</string>
+  <string name="biometric_not_hardware_detected">Dieses Gerät unterstützt keine biometrische Authentifizierung</string>
+  <string name="biometric_not_enrolled">Registriere mindestens ein biometrisches Merkmal, um diese Funktion zu nutzen</string>
+  <string name="biometric_prompt_title">Biometrisches Einloggen</string>
+  <string name="biometric_prompt_subtitle">Melde dich mit deinem biometrischem Merkmal an</string>
   <string name="media_notif_ticker">%1$s Musik Player</string>
   <string name="media_state_playing">%1$s (playing)</string>
   <string name="media_state_loading">%1$s (loading)</string>
