--- a/owncloudApp/src/main/res/values-da/strings.xml
+++ b/owncloudApp/src/main/res/values-da/strings.xml
@@ -1,5 +1,8 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <string name="about_android">%1$s til Android</string>
+  <string name="about_version">Version %1$s</string>
+  <string name="actionbar_search">Søg i mappen</string>
   <string name="actionbar_sync">Genindlæs konto</string>
   <string name="actionbar_upload">Upload</string>
   <string name="actionbar_upload_from_apps">Indhold fra andre apps</string>
@@ -54,7 +57,7 @@
   <string name="uploader_btn_upload_text">Upload</string>
   <string name="uploader_top_message">Vælg upload mappe</string>
   <string name="uploader_wrn_no_account_title">Ingen konto fundet</string>
-  <string name="uploader_wrn_no_account_text">Der findes ikke %1$s k0nti på din enhed. Sæt venligst en konto op først.</string>
+  <string name="uploader_wrn_no_account_text">Der findes ikke %1$s konti på din enhed. Sæt venligst en konto op først.</string>
   <string name="uploader_wrn_no_account_setup_btn_text">Opsætning</string>
   <string name="uploader_wrn_no_account_quit_btn_text">Afslut</string>
   <string name="uploader_error_title_no_file_to_upload">Ingen fil til upload.</string>
@@ -66,6 +69,8 @@
   <string name="uploader_error_message_source_file_not_copied">En fejl opstod ved kopiering af filen til en midlertidig folder. Prøv venligst igen.</string>
   <string name="file_list_seconds_ago">sekunder siden</string>
   <string name="file_list_empty">Her er tomt. Upload noget!</string>
+  <string name="file_list_empty_available_offline">Der er ingen filer tilgængelig offline.</string>
+  <string name="file_list_empty_shared_by_links">Ingen filer er blevet delt med et link.</string>
   <string name="file_list_loading">Indlæser...</string>
   <string name="file_list_no_app_for_file_type">Ingen app fundet for filtype</string>
   <string name="local_file_list_empty">Der er ingen filer i denne mappe.</string>
@@ -76,6 +81,8 @@
   <string name="file_list_file">fil</string>
   <string name="file_list_files">fil</string>
   <string name="filedetails_select_file">Tryk på en fil for at vise yderligere information.</string>
+  <string name="upload_to">Upload til %1$s</string>
+  <string name="upload_files_title">Filer</string>
   <string name="filedetails_size">Størelse:</string>
   <string name="filedetails_type">Type:</string>
   <string name="filedetails_created">Oprettet:</string>
@@ -95,13 +102,16 @@
   <string name="common_error">Fejl</string>
   <string name="common_loading">Indlæser...</string>
   <string name="common_unknown">ukendt</string>
+  <string name="common_error_unknown">ukendt fejl</string>
   <string name="common_pending">Afventer</string>
   <string name="common_important">Vigtigt</string>
   <string name="about_title">Om</string>
   <string name="change_password">Skift kodeord</string>
   <string name="delete_account">Fjern konto</string>
   <string name="create_account">Opret konto</string>
+  <string name="upload_chooser_title">Upload fra</string>
   <string name="uploader_info_dirname">Mappenavn</string>
+  <string name="uploader_upload_in_progress_ticker">Uploader...</string>
   <string name="uploader_upload_in_progress_content">%1$d%% Uploader %2$s</string>
   <string name="uploader_upload_succeeded_ticker">Upload færdig</string>
   <string name="uploader_upload_succeeded_content_single">%1$s uploadet</string>
@@ -118,6 +128,8 @@
   <string name="uploads_view_group_current_uploads">Nuværende</string>
   <string name="uploads_view_group_failed_uploads">Fejlet (tryk for at prøve igen)</string>
   <string name="uploads_view_group_finished_uploads">Sendt</string>
+  <string name="uploads_view_group_file_count">%d filer</string>
+  <string name="uploads_view_group_file_count_single">%d fil</string>
   <string name="uploads_view_upload_status_succeeded">Fuldført</string>
   <string name="uploads_view_upload_status_cancelled">Annulléret</string>
   <string name="uploads_view_upload_status_paused">Pauset</string>
@@ -135,6 +147,7 @@
   <string name="uploads_view_upload_status_waiting_for_wifi">Venter på wifi-forbindelse</string>
   <string name="uploads_view_later_waiting_to_upload">Venter med upload</string>
   <string name="uploads_view_unsupported_media_type">Ikke-understøttet medietype</string>
+  <string name="downloader_download_in_progress_ticker">Downloader...</string>
   <string name="downloader_download_in_progress_content">%1$d%% Downloader %2$s</string>
   <string name="downloader_download_succeeded_ticker">Download fuldført</string>
   <string name="downloader_download_succeeded_content">%1$s downloadet</string>
