--- a/owncloudApp/src/main/res/values-es/strings.xml
+++ b/owncloudApp/src/main/res/values-es/strings.xml
@@ -37,7 +37,8 @@
   <string name="prefs_accounts">Cuentas</string>
   <string name="prefs_manage_accounts">Gestionar cuentas</string>
   <string name="prefs_passcode">Código de bloqueo</string>
-  <string name="prefs_biometric_summary">Habilitar código de acceso o bloqueo de patrón para activar esta opción</string>
+  <string name="prefs_biometric">Bloqueo biométrico</string>
+  <string name="prefs_biometric_summary">Habilita el código de acceso o el patrón de bloqueo para activar esta opción</string>
   <string name="prefs_touches_with_other_visible_windows">Toques con otras ventanas visibles.</string>
   <string name="prefs_touches_with_other_visible_windows_summary">Permite los toques  cuando la vista está oculta por otra ventana visible. Habilítelo para utilizar aplicaciones de filtrado de luz.</string>
   <string name="confirmation_touches_with_other_windows_title">¿Está seguro que desea habilitar esta función?</string>
@@ -224,6 +225,10 @@
   <string name="pass_code_wrong">Código de acceso incorrecto</string>
   <string name="pass_code_removed">Código de acceso borrado</string>
   <string name="pass_code_stored">Contraseña almacenada</string>
+  <string name="biometric_not_hardware_detected">Este dispositivo no soporta autenticación biométrica</string>
+  <string name="biometric_not_enrolled">Registra al menos una característica biométrica para usarla</string>
+  <string name="biometric_prompt_title">Inicio de sesión biométrico</string>
+  <string name="biometric_prompt_subtitle">Inicia sesión usando tú credencial biométrico</string>
   <string name="media_notif_ticker">Reproductor de música %1$s</string>
   <string name="media_state_playing">%1$s (reproduciendo)</string>
   <string name="media_state_loading">%1$s (cargando)</string>
