--- a/owncloudApp/src/main/res/values-gl/strings.xml
+++ b/owncloudApp/src/main/res/values-gl/strings.xml
@@ -377,6 +377,7 @@ Descárgueo de aquí: %2$s</string>
   <string name="clipboard_uxexpected_error">Produciuse un erro non agardado ao copiar no portapapeis</string>
   <string name="clipboard_label">Texto copiado dende %1$s</string>
   <string name="error_cant_bind_to_operations_service">Produciuse un erro crítico: non é posíbel realizar as operacións</string>
+  <string name="network_error_socket_exception">Produciuse un erro mentres conectaba co servidor.</string>
   <string name="network_error_socket_timeout_exception">O servidor tardou de máis en responder</string>
   <string name="network_error_connect_timeout_exception">O servidor tardou de máis en conectar</string>
   <string name="network_host_not_available">Non foi posíbel acadar o servidor</string>
@@ -548,4 +549,6 @@ Descárgueo de aquí: %2$s</string>
   <string name="welcome_feature_5_text">Reproduza os seus vídeos sen descargalos</string>
   <string name="no_borwser_installed_alert">Non hai un navegador instalado, Instale un para poder facer un acceso seguro.</string>
   <string name="common_not_found">non foi atopado</string>
+  <string name="supports_oauth2_error">Non foi posible saber se OAuth2 é compatíbel</string>
+  <string name="get_base_url_error">Non foi posíbel saber cal é o URL base do servidor</string>
 </resources>
