--- a/owncloudApp/src/main/res/values-pt-rBR/strings.xml
+++ b/owncloudApp/src/main/res/values-pt-rBR/strings.xml
@@ -376,6 +376,7 @@
   <string name="clipboard_uxexpected_error">Erro inesperado ao copiar para a área de transferência</string>
   <string name="clipboard_label">Texto copiado de %1$s</string>
   <string name="error_cant_bind_to_operations_service">Erro crítico: não pode executar operações</string>
+  <string name="network_error_socket_exception">Um erro ocerreu durante a conexão com o servidor.</string>
   <string name="network_error_socket_timeout_exception">O servidor demorou demais a responder</string>
   <string name="network_error_connect_timeout_exception">O servidor demorou muito para se conectar</string>
   <string name="network_host_not_available">Servidor não pôde ser alcançado</string>
@@ -547,4 +548,6 @@
   <string name="welcome_feature_5_text">Assista seus vídeos sem baixá-los</string>
   <string name="no_borwser_installed_alert">Nenhum navegador instalado. Por favor, instale um navegador para permitir um login seguro.</string>
   <string name="common_not_found">não foi encontrado</string>
+  <string name="supports_oauth2_error">Não foi possível  saber se OAuth2 é suportada</string>
+  <string name="get_base_url_error">Não foi possível saber a url base do servidor</string>
 </resources>
